# sandstone

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  default.nix  release.nix  sandstone.cabal
dep/hnix-store/: github.json
dep/nix/: github.json
dep/nixpkgs/: github.json
example/: A.hs  B.hs  C.hs  D.hs  Main.hs  X.hs  X.hs-boot  parse.hs
example/Nested/: E.hs
src/: Graph.hs  Main.hs  ParseMakefile.hs
src-bin/: demo-ca.hs  demo-dyn-drv.hs
src/Sandstone/: Error.hs  Graph.hs  MakefileGraph.hs  MakefileParse.hs  NixCLI.hs  ParseMakefile.hs  WriteDerivation.hs
src/Sandstone/GhcMakefile/: Graph.hs  Parse.hs
