cabal-version:      3.0
name:               sandstone
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Ericson, Luigy Leon
maintainer:         maintainer@obsidian.system
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
  ghc-options: -Wall

executable sandstone
  import:           warnings

  main-is:          Main.hs

  -- other-modules:

  -- other-extensions:

  build-depends:
    base ^>=4.18.2.1,
    validation,
    hnix-store-core,
    hnix-store-json,
    text,
    containers,

  hs-source-dirs: src

  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  default-language: Haskell2010
