cabal-version:      3.0
name:               sandstone
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             John Ericson, Luigy Leon
maintainer:         maintainer@obsidian.system
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
  ghc-options: -Wall -Wunused-packages

  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:           common

  hs-source-dirs: src

  exposed-modules:
    Sandstone.Error
    Sandstone.GhcMakefile.Graph
    Sandstone.GhcMakefile.Parse
    Sandstone.NixCLI
    Sandstone.WriteDerivation

  build-depends:
    aeson,
    base ^>=4.18.2.1,
    bytestring,
    containers,
    data-default,
    dependent-sum,
    hnix-store-core,
    hnix-store-json,
    process,
    text,
    transformers,
    validation,
    vector,

executable demo-ca
  import:           common

  main-is:          demo-ca.hs

  -- other-extensions:

  build-depends:
    base,
    directory,
    hnix-store-core,
    sandstone,
    text,
    validation,

  hs-source-dirs: src-bin

  default-language: Haskell2010
